fixed full-bleed sections and repasted the minified css :mechanic:

--- a/styles/sass/_930px-media-query.scss
+++ b/styles/sass/_930px-media-query.scss
@@ -31,10 +31,7 @@
     }
 
     .products {
-        max-width: 1400px;
         margin: 0 auto;
-        background-repeat: no-repeat;
-        background-position: 50% 50%;
         display: flex;
         justify-content: flex-end;
     }
