--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -305,7 +305,6 @@ header {
 /* .portfolio section begins */
 .portfolio {
     display: flex;
-    max-width: 1400px;
     margin: 0 auto;
 }
 
